# my_python_package_template

./: .gitignore  .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pytest.yml
docs/: index.md
src/mypackage/: __init__.py  core.py
tests/integration/: test_integration.py
tests/unit/: test_mypackage.py
